Integrated the Resend api for email verification for login and register
